# termirs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
assets/: demo.tape
examples/: async_with_tui.rs
src/: app.rs  async_ssh_client.rs  error.rs  events.rs  file_edit.rs  key_event.rs  lib.rs  main.rs  mode_state.rs  search_state.rs  ssh_client.rs  transfer.rs  ui.rs  utils.rs
src/config/: encryption.rs  manager.rs  mod.rs  ssh_config.rs
src/filesystem/: dir_walker.rs  mod.rs  sftp.rs  sftp_file.rs
src/key_event/: autocomplete.rs  connected.rs  connection_list.rs  file_explorer.rs  form.rs  mod.rs  port_forwarding.rs  scp.rs  table_handler.rs
src/terminal/: mod.rs  selection.rs
src/ui/: components.rs  connection.rs  file_explorer.rs  mod.rs  popup.rs  port_forwarding.rs  scp.rs  search.rs  table.rs  table_renderer.rs  terminal.rs
