[package]
name = "termirs"
version = "0.2.11"
edition = "2024"
authors = ["Caelansar"]
description = "A modern, async SSH terminal client"
license = "MIT"
repository = "https://github.com/caelansar/termirs"
readme = "README.md"
keywords = ["ssh", "terminal", "sftp"]
categories = ["command-line-interface"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
ring = "0.17"
crossterm = { version = "0.28", features = ["event-stream"] }
# vt100 = "0.16"  # Replaced by wezterm-term
thiserror = "1.0"
toml = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs"] }
tokio-util = "0.7.16"
russh = "0.57.0"
russh-sftp = { git = "https://github.com/caelansar/russh-sftp.git" }
futures = "0.3"
anyhow = { version = "1", optional = true }
tui-textarea = "0.7"
bytes = "1.10.1"
ratatui-explorer = { git = "https://github.com/caelansar/ratatui-explorer.git" }
ssh2-config = { git = "https://github.com/caelansar/ssh2-config.git", branch = "develop" }
arboard = "3"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
content_inspector = "0.2"
edit = "0.1"
tempfile = "3"
wezterm-term = { git = "https://github.com/caelansar/wezterm.git", package = "wezterm-term" }
wezterm-surface = { git = "https://github.com/caelansar/wezterm.git", package = "wezterm-surface" }


[dev-dependencies]
rand = "0.8"

[[example]]
name = "async_with_tui"
required-features = ["anyhow"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
